# advent-of-code

./: CMakeLists.txt  README.md
2023/: CMakeLists.txt
2023/day1/: .unit_tests.cpp.swp  CMakeLists.txt  CalibrationDocument.h  FileParser.h  UnitTests.cpp  calibration.cpp  calibration.h  p1_main.cpp  p2_main.cpp  part1.cpp  part1.h  part2.cpp  part2.h  unit-tests.cpp
2023/day2/: .game.cpp.swp  .game.h.swp  .unit-tests.cpp.swp  CMakeLists.txt  game.h  parse.cpp  parse.h  process.cpp  process.h  unit-tests.cpp
2023/day3/: CMakeLists.txt  Engine.cpp  Engine.h  UnitTests.cpp  part-numbers.cpp  part-numbers.h  unit-tests.cpp
2023/day4/: CMakeLists.txt  ScratchCards.h  UnitTests.cpp
2023/lib/: CMakeLists.txt  FileParser.cpp  FileParser.h
2023/src/day1/: CMakeLists.txt  CalibrationDocument.cpp  UnitTests.cpp
2023/src/day2/: CMakeLists.txt  GameDocument.cpp  GameDocument.h  UnitTests.cpp  parse.cpp  parse.h  process.cpp  process.h  unit-tests.cpp
2023/src/day3/: CMakeLists.txt  EngineSchematic.cpp  EngineSchematic.h  NumberTable.cpp  NumberTable.h  StarTable.cpp  StarTable.h  UnitTests.cpp
2023/src/day4/: CMakeLists.txt  ScratchCards.cpp  ScratchCards.h  UnitTests.cpp
2023/src/day5/: Almanac.cpp  Almanac.h  AlmanacParser.cpp  AlmanacParser.h  CMakeLists.txt  UnitTests.cpp
2023/src/day6/: CMakeLists.txt  Document.cpp  Document.h  DocumentParser.cpp  DocumentParser.h  UnitTests.cpp
2023/src/template/: UnitTests.cpp
2023/template/: CMakeLists.txt
